# nixos

./: .gitignore  CLAUDE.md  claude.md  flake.nix  result  update.sh
modules/: options.nix
modules/factory/mount-cifs-nixos/: mount-cifs-nixos.nix
modules/factory/user/: user.nix
modules/hosts/_ganymede/users/: marcus.nix
modules/hosts/callisto/: configuration.nix  flake-parts.nix  hardware.nix
modules/hosts/callisto/users/: marcus.nix
modules/hosts/europa/: configuration.nix  flake-parts.nix
modules/hosts/europa/users/: marcusmakila.nix
modules/hosts/ganymede/: configuration.nix  flake-parts.nix
modules/hosts/ganymede/users/: marcus.nix
modules/nix/flake-parts/: darwin.nix  dendritic-tools.nix  factory.nix  lib.nix  nix-darwin.nix  wrappers.nix
modules/nix/tools/pkgs-by-name/: flake-parts.nix  pkgs-by-name.nix
modules/nix/tools/secrets/: flake-parts.nix  secrets.nix
modules/programs/: cider.nix  cosmic.nix  desktop.nix  dev.nix  flake-parts.nix  fonts.nix  gtk.nix  hyprland.nix  niri.nix  qt.nix  spotify.nix  zed.nix
modules/programs/browser/: browser.nix  helium.nix  vivaldi.nix
modules/programs/cad/: cad.nix
modules/programs/cli/: cli.nix  generic.nix  nixos.nix
modules/programs/compositor/: compositor.nix  hyprland.nix
modules/programs/desktop/: desktop.nix
modules/programs/desktop-env/: cosmic.nix  desktop-env.nix  gnome.nix
modules/programs/dev/: dev.nix
modules/programs/discord/: discord.nix
modules/programs/editor/: editor.nix  nvim.nix  vscode.nix  zed.nix
modules/programs/filebrowser/: filebrowser.nix
modules/programs/gaming/: gaming.nix
modules/programs/gnome/: gnome.nix
modules/programs/media/: cider.nix  media.nix
modules/programs/shell/: shell.nix
modules/programs/terminal/: terminal.nix
modules/programs/theming/: gtk.nix  qt.nix  theming.nix
modules/services/: ssh.nix  tailscale.nix
modules/users/marcus/: configuration.nix  flake-parts.nix  hjem.nix  marcus.nix
modules/users/marcusmakila/: marcusmakila.nix
modules/wrappers/: bash.nix  caelestia.nix  fish.nix  git.nix  hypridle.nix  hyprland.nix  hyprqt6engine.nix  neovim.nix  niri.nix  shell-common.nix  wezterm.nix  zsh.nix
modules/wrappers/neovim/: neovim.nix
modules/wrappers/quickshell/: States.qml  default.nix  defualt.nix  shell.qml
modules/wrappers/quickshell/lib/emphshell/: .clang-format  CMakeLists.txt  appdb.cpp  appdb.hpp  build.sh  calc.cpp  calc.hpp  search.cpp  search.hpp
secrets/: master.pub
(+56 files in other folders)
